data/derived/comb/progs/unify/prog3833.ml.out
Characters 486-488:
  | CosE(x1,x2,x3)	-> "cos(pi*" ^ x1 ^ "*" ^ x2 ^ ")e^(-pi*" ^ x3 ^ "^2)";;
                                  ^^
Error: This expression has type expr but an expression was expected of type
         string
